--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -16,8 +16,9 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Solicitudes</a>  <!--TODO: Crear vista -->
         <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{% url 'actividad:propias' %}">Mis Actividades</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/logout/">Cerrar Sesion</a>
     </div>
-
 
 </li>
