Cambio a snippet de tabla de inventario.

--- a/inventario/templates/inventario/equipo/include/partial_equipo_list.html
+++ b/inventario/templates/inventario/equipo/include/partial_equipo_list.html
@@ -1,9 +1,10 @@
-<table class="table">
+<table class="table" id="inventario">
     <thead>
     <tr>
         <td>Etiqueta</td>
         <td>Modelo</td>
         <td>Aula</td>
+        <td>Opciones</td>
     </tr>
     </thead>
     <tbody>
