Cambios a plantilla base.

--- a/templates/includes/header/partial_search_dropdown.html
+++ b/templates/includes/header/partial_search_dropdown.html
@@ -9,9 +9,9 @@
         <a class="dropdown-item" href="{% url 'ubicacion:unidades' %}">Facultades</a>
         <a class="dropdown-item" href="{% url 'ubicacion:secciones' %}">Escuelas</a>
         <a class="dropdown-item" href="{% url 'ubicacion:carreras' %}">Carreras</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'perfil:lista' %}">Profesor</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'estudiante:lista' %}">Estudiantes</a>
+{#        <div class="dropdown-divider"></div>#}
+{#        <a class="dropdown-item" href="{% url 'perfil:lista' %}">Profesor</a>#}
+{#        <div class="dropdown-divider"></div>#}
+{#        <a class="dropdown-item" href="{% url 'estudiante:lista' %}">Estudiantes</a>#}
     </div>
 </li>
