--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -18,13 +18,14 @@
             <a class="dropdown-item" href="#">Profesores <span
                     class="badge badge-primary">{{ request.user.perfil.unidad.personal.profesores.count }}</span></a>
             <a class="dropdown-item" href="#">Estudiantes <span
-                        class="badge badge-primary">{{ request.user.perfil.unidad.estudiantes.count }}</span></a>
+                    class="badge badge-primary">{{ request.user.perfil.unidad.estudiantes.count }}</span></a>
             <a class="dropdown-item" href="#">Actividades <span
-                        class="badge badge-primary">{{ request.user.perfil.unidad.actividades.count }}</span></a>
+                    class="badge badge-primary">{{ request.user.perfil.unidad.actividades.count }}</span></a>
             <a class="dropdown-item" href="#">Anteproyectos <span
-                        class="badge badge-primary">{{ request.user.perfil.unidad.anteproyectos.count }}</span></a>
+                    class="badge badge-primary">{{ request.user.perfil.unidad.anteproyectos.count }}</span></a>
             <a class="dropdown-item" href="#">Trabajos de Graduacion <span
-                        class="badge badge-primary">{{ request.user.perfil.unidad.proyectos.count }}</span></a>
+                    class="badge badge-primary">{{ request.user.perfil.unidad.proyectos.count }}</span></a>
+            <a class="dropdown-item" href="#">Reportes</a>
         </div>
     {% endif %}
 </li>
