--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                             content out within the larger
                             container.{% endblock %}</p>
                         <p class="lead">
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                            <a class="btn btn-primary btn-lg" href="#" role="button">Apender Mas</a>
                         </p>
                     </div>
                 </div>
