Ajuste a modelos de actividades.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}SIGIA - Indice{% endblock %}
+{% block title %}Indice{% endblock %}
 
 {% block jumbotron-title %}Bienvenido al sistema SIGIA{% endblock %}
 {% block jumbotron-subtitle %}Sistema para la gestion de informacion academica y administrativa {% endblock %}
