Cambio a despliegue de nombre en el sistema.

--- a/perfiles/templates/perfiles/editar.html
+++ b/perfiles/templates/perfiles/editar.html
@@ -117,8 +117,13 @@
             </div>
         </form>
     </div>
+
+
 {% endblock %}
 
 {% block javascript %}
     {% include 'includes/partial_datepicker.html' %}
+        <script>
+            $( "#id_imagen" ).addClass( "custom-file-input" );
+        </script>
 {% endblock %}
