--- a/estudiantes/templates/estudiantes/anteproyecto/lista.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/lista.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-        <div class="row">
+    <div class="row">
         <div class="col-md-8 offset-md-2 col-sm-12">
             <div class="card">
                 <div class="card-body">
-                    <div class="card-title"><h4>Anteproyectos Pendientes</h4></div>
+                    <div class="card-title"><h4>Anteproyectos Pendientes</h4>
+                        <hr/>
+                        {% if perms.estudiantes.add_anteproyecto %}
+                            <a class="btn btn-outline-primary" href="{% url 'estudiante:crear-anteproyecto' %}">Registrar</a></div>
+                        {% endif %}
                     <div class="card-text">
                         {% include 'estudiantes/anteproyecto/include/tabla.html' %}
                     </div>
