--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -21,7 +21,7 @@
                     class="badge badge-primary">{{ request.user.perfil.unidad.estudiantes.count }}</span></a>
             <a class="dropdown-item" href="#">Actividades <span
                     class="badge badge-primary">{{ request.user.perfil.unidad.actividades.count }}</span></a>
-            <a class="dropdown-item" href="#">Anteproyectos <span
+            <a class="dropdown-item" href="{% url 'estudiante:anteproyectos-unidad' %}">Anteproyectos <span
                     class="badge badge-primary">{{ request.user.perfil.unidad.anteproyectos.count }}</span></a>
             <a class="dropdown-item" href="#">Trabajos de Graduacion <span
                     class="badge badge-primary">{{ request.user.perfil.unidad.proyectos.count }}</span></a>
