--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -18,6 +18,8 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'actividad:propias' %}">Mis Actividades</a>
         <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="{% url 'core:cambiar-password' %}">Cambiar Password</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/logout/">Cerrar Sesion</a>
     </div>
 
