--- a/ubicacion/templates/sede.html
+++ b/ubicacion/templates/sede.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ sede.carrerainstancia_set.count }}</h3></p>
+                        <h3 class="text-right">{{ sede.carreras.count }}</h3></p>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                         Estudiantes por Facultad
                     </div>
                     <div class="card-body">
-                        <p class="card-title">Cantidad de Estudiantes: {{ sede.get_estudiantes_count }}</p>
+                        <p class="card-title">Cantidad de Estudiantes: {{ sede.estudiantes.count }}</p>
                         <p class="card-text">
                         <h3 class="text-right" id="estudianteChartHolder">
                             <canvas id="estudianteChart"></canvas>
