--- a/ubicacion/templates/ubicacion/consulta/escuela.html
+++ b/ubicacion/templates/ubicacion/consulta/escuela.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
+
+{% block head %}
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+{% endblock %}
 
 {% block title %}Consultar - Escuela{% endblock %}
 {% block content %}
@@ -7,98 +11,45 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Busqueda de Escuela </h4>
-                    <div class="container">
-                        <form>
-                            <div class="form-row">
-                                <div class="col">{% render_field filter.form.cod_sede class="form-control" placeholder="Codigo de Sede" %}</div>
-                                <div class="col">{% render_field filter.form.cod_unidad class="form-control" placeholder="Codigo de Facultad" %}</div>
-                                <div class="col">{% render_field filter.form.cod_seccion class="form-control" placeholder="Codigo de Escuela" %}</div>
-                                <button type="submit" class="btn btn-primary"><i class="fa fa-search"
-                                                                                 aria-hidden="true"></i> Buscar
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Listado de Secciones</h4>
-                    <div id="accordion" role="tablist">
-
-                        {% for seccion in secciones %}
-                            <div class="card">
-                                <div class="card-header" role="tab" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <a class="collapsed" data-toggle="collapse"
-                                           href="#collapse{{ forloop.counter }}"
-                                           aria-expanded="false" aria-controls="collapse{{ forloop.counter }}">
-                                            {{ seccion.sede.nombre|title }} - {{ seccion.unidad.nombre|title }}
-                                            - {{ seccion.seccion.nombre|title }}
-                                        </a>
-                                    </h5>
-                                </div>
-                                <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel"
-                                     aria-labelledby="headingOne" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <table class="table table-sm">
-                                            <thead>
-                                            <tr>
-                                                <th>Codigo de Sede</th>
-                                                <td>{{ seccion.cod_sede }}</td>
-                                                <th>Codigo de Facultad</th>
-                                                <td>{{ seccion.cod_unidad }}</td>
-                                                <th>Codigo de Escuela</th>
-                                                <td>{{ seccion.cod_seccion }}</td>
-                                            </tr>
-                                            </thead>
-                                        </table>
-                                        <hr/>
-                                        <div class="text-right">
-                                            <a href="{{ carrera.get_absolute_url }}">Ver Dashboard</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-
+                    <h4 class="card-title">Listado de Escuelas y Departamentos</h4>
                     <hr/>
-                    <!-- Paginacion -->
-                    <nav aria-label="...">
-                        <ul class="pagination">
-                            {% if secciones.has_previous %}
-                                <li class="page-item">
-                                    <a class="page-link"
-                                       href="?page={{ secciones.previous_page_number }}{% if request.GET %}&cod_sede={{ request.GET.cod_sede }}&cod_unidad={{ request.GET.cod_unidad }}&cod_seccion={{ request.GET.cod_seccion }}{% endif %}">Previous</a>
-                                </li>
-                            {% else %}
-                                <li class="page-item disabled"><a class="page-link" href="#"
-                                                                  tabindex="-1">Previous</a></li>
-                            {% endif %}
-                            <li class="page-item active"><a class="page-link" href="#">
-                                Page {{ secciones.number }} of {{ secciones.paginator.num_pages }} </a></li>
-                            {% if secciones.has_next %}
-                                <li class="page-item"><a class="page-link"
-                                                         href="?page={{ secciones.next_page_number }}{% if request.GET %}&cod_sede={{ request.GET.cod_sede }}&cod_unidad={{ request.GET.cod_unidad }}&cod_seccion={{ request.GET.cod_seccion }}{% endif %}">next</a>
-                                </li>
-                            {% else %}
-                                <li class="page-item disabled"><a class="page-link"
-                                                                  href="#">next</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </nav>
-
-
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="secciones">
+                            <thead>
+                            <tr>
+                                <th>Codigo de Seccion</th>
+                                <th>Nombre de Seccion</th>
+                                <th>Tipo</th>
+                                <th>Opciones</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for seccion in secciones %}
+                                <tr>
+                                    <th>{{ seccion.cod_sede }}-{{ seccion.cod_unidad }}-{{ seccion.cod_seccion }}</th>
+                                    <th>{{ seccion.seccion.nombre.capitalize }}</th>
+                                    <th>{{ seccion.seccion.get_tipo_display.capitalize }}</th>
+                                    <th>
+                                        <a href="{% url 'ubicacion:seccion' seccion.cod_sede seccion.cod_unidad seccion.cod_seccion %}"
+                                           class="btn btn-outline-info">Ver
+                                            Detalle</a></th>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#secciones').DataTable();
+        });
+    </script>
 {% endblock %}
