Arreglos a ubicaciones de archivos.

--- a/templates/includes/header/partial_search_dropdown.html
+++ b/templates/includes/header/partial_search_dropdown.html
@@ -7,7 +7,7 @@
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="{% url 'ubicacion:sedes' %}">Sedes</a>
         <a class="dropdown-item" href="{% url 'ubicacion:unidades' %}">Facultades</a>
-        <a class="dropdown-item" href="{% url 'ubicacion:secciones' %}">Escuelas</a>
+        <a class="dropdown-item" href="{% url 'ubicacion:secciones' %}">Escuelas y Departamentos</a>
         <a class="dropdown-item" href="{% url 'ubicacion:carreras' %}">Carreras</a>
     </div>
 </li>
