--- a/ubicacion/templates/ubicacion/carrera.html
+++ b/ubicacion/templates/ubicacion/carrera.html
@@ -1,13 +1,93 @@
 {% extends 'base.html' %}
 
 {% block title %}
-
+    {{ carrera.cod_sede }}-{{ carrera.cod_unidad }}-{{ carrera.cod_seccion }}-{{ carrera.cod_carrera }}
 {% endblock %}
 
 {% block head %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"
+            integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
+    <div class="container-fluid">
+
+        <div class="row top-buffer">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                           {{ carrera.carrera.nombre.capitalize }} {{ carrera.carrera.get_tipo_display }} : {{ carrera.cod_sede }}-{{ carrera.cod_unidad }}-{{ carrera.cod_seccion }}-{{ carrera.cod_carrera }}</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">Cantidad de Estudiantes</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ carrera.estudiantes.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">Cantidad de Anteproyectos</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ carrera.anteproyectos.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">Cantidad de Proyectos</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ carrera.proyectos.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {#    Graficas    #}
+
+        <div class="row top-buffer">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Estudiantes por Semestre</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Proyectos por Categoria</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Actividades Realizadas</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 {% endblock %}
 
 {% block javascript %}
