--- a/ubicacion/templates/ubicacion/escuela.html
+++ b/ubicacion/templates/ubicacion/escuela.html
@@ -1,30 +1,99 @@
 {% extends 'base.html' %}
 
 {% block title %}
-
+    {{ seccion.cod_sede }}-{{ seccion.cod_unidad }}-{{ seccion.cod_seccion }}
 {% endblock %}
 
 {% block head %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"
             integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
     <div class="container-fluid">
-        <div class="row">
+
+        <div class="row top-buffer">
             <div class="col-md-12">
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">
-                                <h3 class="text-right"></h3>
-                            </p>
-                        </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                           {{ seccion.seccion.nombre.capitalize }} : {{ seccion.cod_sede }}-{{ seccion.cod_unidad }}-{{ seccion.cod_seccion }}</h4>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="row top-buffer">
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">Cantidad de Estudiantes</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ seccion.estudiantes.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">Cantidad de Carreras</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ seccion.carreras.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">Cantidad de Proyectos</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ seccion.proyectos.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-header">Cantidad de Anteproyectos</div>
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <h3 class="text-right">{{ seccion.anteproyectos.all.count }}</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {#    Graficas    #}
+
+        <div class="row top-buffer">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Estudiantes por Semestre</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Proyectos Finales</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-url="">Anteproyectos Aprobados, Pendientes y Rechazados</div>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 {% endblock %}
 
